--- a/index.html
+++ b/index.html
@@ -116,14 +116,16 @@
                     <ion-icon name="cart" class="add-cart"></ion-icon>
                 </div>
                 <div class="food-box">
-                    <div class="pic"><img src="images/103.jpg" class="food-img"></div>
+                    <div class="pic">
+                        <img src="images/103.jpg" class="food-image"></div>
                     <h2 class="food-title">Egg Veechu</h2>
                     <span class="food-price">Rs.65</span>
                     <ion-icon name="cart" class="add-cart"></ion-icon>
                 </div>
 
                 <div class="food-box">
-                    <div class="pic"><img src="images/104.jpg" class="food-img"></div>
+                    <div class="pic">
+                        <img src="images/104.jpg" class="food-image"></div>
                     <h2 class="food-title">Egg Roast</h2>
                     <span class="food-price">Rs.65</span>
                     <ion-icon name="cart" class="add-cart"></ion-icon>
